# acebot

./: .gitignore  API_README.md  CHANGELOG.md  DEEPGRAM_INTEGRATION.md  GEMINI_INTEGRATION_SUMMARY.md  INSTALLATION.md  InterviewCorvusLandingPage.jsx  README.md  README_landing_page.md  SIMPLE_README.md  TODO_interview_copilot.md  TODO_landing_page.md  TODO_readme_analysis.md  TODO_readme_generation.md  TODO_simple_readme_update.md  TODO_streaming_optimization.md  api_server.py  build.py  cli.py  client_demo.py  config.py  enhanced_copilot.py  integration_example.py  interview-corvus-landing.html  interview_copilot.py  personal_data_sample.json  prepare_release.py  pyproject.toml  standalone_interview_copilot.py  test_components.py  test_copilot.py  test_gemini_integration.py  test_https.py  test_interview_copilot.py  test_pdf_support.py  test_recording_workflow.py  test_session_persistence.py  test_window_api.py  window_controller.html
certs/: cert.pem  key.pem
docs/: README.md  docusaurus.config.ts  package-lock.json
docs/docs/: api-configuration.md  best-practices.md  hotkeys.md  installation.md  intro.md  usage.md
docs/interview-corvus-docs/: docusaurus.config.ts  package.json
docs/interview-corvus-docs/docs/: installation.md  intro.md
docs/interview-corvus-docs/docs/api/: overview.md
docs/interview-corvus-docs/docs/customization/: hotkeys.md  overview.md
docs/interview-corvus-docs/docs/usage/: advanced-features.md  getting-started.md
interview_corvus/: config.py  main.py
interview_corvus/api/: __init__.py  api_handler.py  models.py  network_utils.py  routes.py  server.py  ui_template.py  web_server.py
interview_corvus/api/static/: app.js  index.html  styles.css
interview_corvus/core/: deepgram_service.py  file_processor.py  file_processor_simple.py  hotkey_manager.py  interview_copilot.py  llm_service.py  models.py  prompt_manager.py  recording_service.py
interview_corvus/invisibility/: invisibility_manager.py
interview_corvus/screenshot/: screen_capture_service.py  screenshot_manager.py
interview_corvus/security/: api_key_manager.py
interview_corvus/ui/: file_upload_dialog.py  hotkey_edit.py  main_window.py  main_window_original.py  main_window_refactored.py  settings_dialog.py  styles.py  temp_original.py
interview_corvus/ui/components/: __init__.py  action_bar.py  action_bar_new.py  action_bar_old.py  content_display.py  menu_manager.py  screenshot_controls.py  status_bar.py
