[tool.poetry]
name = "interview-corvus"
version = "0.1.2"
description = ""
authors = ["npavlin <afaneor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic-settings = "^2.8.1"
llama-index = "^0.12.26"
keyring = "^25.6.0"
pyqt6 = "^6.8.1"
pyobjc-core = { version = "^11.0", markers = "sys_platform == 'darwin'" }
pyobjc-framework-cocoa = { version = "^11.0", markers = "sys_platform == 'darwin'" }
pyobjc-framework-quartz = { version = "^11.0", markers = "sys_platform == 'darwin'" }
llama-index-llms-anthropic = "^0.6.10"
loguru = "^0.7.3"
pynput = "^1.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
